# cpp_high_performance

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LEARNING_PATH.md  README.md  RESOURCES.md  quick_start.sh  web.md
00_stl_ptr_oop/: README.md  doc3.md  doc5.md  doc7.md  doc8.md
00_stl_ptr_oop_ms/: ai_graph.cpp  ai_graph2.cpp  compile_run.sh  doc6.md  doc9.md
00_stl_ptr_oop_ms/md/: doc1.md  doc2.md  doc4.md
01_compiler_flags_nuclear/: README.md  doc1.md  main.md  matrix_benchmark.cpp
02_data_layout_soa_aos/: README.md  REAMDE.md  aos_vs_soa_benchmark.cpp  doc1.md
02_data_layout_soa_aos/md/: doc1.md
03_crtp_full_power/: README.md  crtp_complete_guide.cpp  crtp_complete_guide.s
03_crtp_full_power/md/: doc1.md
04_expression_templates/: README.md  doc1.md  expression_templates_complete.cpp  expression_templates_complete.s
05_simd_avx512/: README.md  doc12.md  doc3.md  doc6.md  doc9.md  simd_complete_guide.cpp
05_simd_avx512/md/: doc1.md  doc10.md  doc11.md  doc13.md  doc2.md  doc4.md  doc5.md  doc7.md  doc8.md
06_allocators_arena_pool/: README.md  REAMDE.md  custom_allocators_complete.cpp  doc1.md  doc3.md  perf.sh
06_allocators_arena_pool/md/: doc2.md
07_lockfree_spsc_mpmc/: README.md  REAMDE.md  lockfree_datastructures_complete.cpp
07_lockfree_spsc_mpmc/md/: doc1.md
08_constexpr_all_the_things/: README.md  REAMDE.md  constexpr_complete_guide.cpp  constexpr_complete_guide.s
08_constexpr_all_the_things/md/: doc1.md
09_pgo_lto_bolt/: README.md  baseline_result.txt  benchmark_program.cpp  lto_result.txt  o3_result.txt  pgo_lto_bolt_workflow.sh  pgo_result.txt  result.txt
09_pgo_lto_bolt/md/: doc1.md  doc2.md
10_profiling_perf_vtune_tracy/: README.md  git.sh  hotspot_example.cpp  main.md
11_real_world_eigen_folly/: README.md  REAMDE.md  compile.sh  mini_eigen.cpp
11_real_world_eigen_folly/md/: main.md
12_final_checklist/: README.md  main.md
13-optimization-doc/code/cpuidfake/: Instructions.txt
13-optimization-doc/code/objconv/: changelog.txt
13-optimization-doc/doc/: instruction_tables.ods
